[package]
name = "yttopocketcasts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
envy = "0.4.2"
serde = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
teloxide = { version = "0.11.1", features = ["macros"] }
warp = "0.3.3"
regex = "1.7.0"
once_cell = "1.16.0"
