[package]
name = "yttopocketcasts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
envy = "0.4.2"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
teloxide = { version = "0.12.2", features = ["macros"] }
warp = "0.3.3"
reqwest = { version = "0.11.14", features = ["json", "stream", "gzip", "brotli", "deflate"] }
regex = "1.7.1"
once_cell = "1.17.0"
